ecmascript/parser/tests/test262-error-references/fail/4882f5db31935a04.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/4882f5db31935a04.js:1:20
  |
1 | function*g() { var yield; }
  |                    ^^^^^

